Version 0.7.5

Added the argument `ribbons` to the simGG method. This produces a plot with shaded areas ('ribbons') for the minimum and maximum simulation values as well as the central 50% of this area. It also plots a line for the median value of this area.

Version 0.7.3

Documentation improvements.

Version 0.7.2 

Clean up for CRAN.

Version 0.7.1

Added an error message to `coxsimSpline` if white spaces are not entered before and after equal (=) signs in the `bspline` argument.

Version 0.7

- Added package vignette (partially completed).

- Expanded `coxsimPoly` so that it is capable of simulating other quantities of interest. Also, bug fixes.

- `spin = TRUE` works for quantities of interest when Xj - Xl = 0, i.e. in situations when all of the simulated quantities are 1 (or 0 for First Differences).

- Documentation improvements.

- Bug fixes, including: 
  - SPIn lower bound for different quantities of interest.
  - Fixed an error in the calculation of quantities of interest from Splines.

Version 0.6

- Increased flexibility for setting confidence levels. Now they may be set at any numeric value from 0 through 1.

- Choice of using confidence levels for the middle simulation values or the shortest probability interval. 

	- Many thanks to Ying Liu. Code from his SPIn function is fundamental for making this possible.

- `qi` now automatically determined by `simGG`.

- `means` argument added to `coxsimLinear` and coxsimInteract`. This allows the user to choose if they would like Hazard Rates to be fitted using the variables (other than the variables of interest) set to their means rather than 0. Note: it does not currently support models that include polynomials created by `I`. 
	
	- `means` will be added to the other simulation commands in future versions.

- Minor bug fixes and documentation updates.


Version 0.05
