@@ -1,6 +1,8 @@
 Version 0.7.5
 
-Added the argument `ribbons` to the simGG method. This produces a plot with shaded areas ('ribbons') for the minimum and maximum simulation values as well as the central 50% of this area. It also plots a line for the median value of this area.
+Added the argument `ribbons` to the simGG method for `coxsimLinear` objects. This produces a plot with shaded areas ('ribbons') for the minimum and maximum simulation values as well as the central 50% of this area. It also plots a line for the median value of this area. This feature will be rolled out for all other simulation types in future versions.
+
+Internal improvements to minimise the size of simulation output objects.
 
 Version 0.7.3
 
